--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,11 @@
 name: Astrum.uz deploy to production
 
 on:
-  pull_request:
-    branches: [ "master" ]
-    types: [ closed ]
+  push:
+    branches: [ "main" ]
 
 jobs:
   deploy:
-    if: github.event.pull_request.merged
     name: Deploy
     runs-on: ubuntu-latest
 
@@ -28,7 +26,7 @@ jobs:
             cd /root/astrumuz/backend
 
             echo "🔄 Pulling latest code..."
-            git pull origin master
+            git pull origin main
 
             echo "🐍 Activating virtual environment..."
             source venv/bin/activate
